Bug 960276 - Ensure that we swizzle the middle row correctly when doing a manual CPU BGRA<->RGBA swizzle in onReadPixels(). r=snorp, a=bajaj